# chess-engine

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
Nyx/: search.py
Nyx/chess_logic/: board.cpp  board.h  make_move.cpp  move_generation.cpp
Nyx/chess_rules/: init_attacks.py  (+2 more)
chess_engine/: move.py
talia/: CMakeLists.txt  cli.py  interpreter.py  main.py  talia.cc
talia/agent/: agent.h  evaluate.cpp  search.cpp
talia/assets/styles/: default.json
talia/chess/: definitions.cpp  definitions.h  generator.h  pseudo.cpp  pseudo.h  pseudo.hpp
talia/engine/: evaluator.cpp  evaluator.h  minimax.cpp  minimax.h
talia/game/: board.cpp  board.h  generator.cpp  generator.h  move.cpp  move.h  offset.cpp  offset.h  piece.cpp  piece.h  player.cpp  player.h  position.cpp  position.h  pseudo.cpp  pseudo.h
talia/interface/CLI/: __init__.py  interpreter.py
talia/interface/GUI/windows/: __init__.py  analyze_window.py  board_window.py  edit_window.py  terminal_window.py
talia/interpreter/: CMakeLists.txt  cli.cpp  cli.h
talia/managers/: __init__.py  font_manager.py  style_manager.py
talia/parsers/: __init__.py  fen_parser.py  pgn_parser.py  piece_parser.py  png_parser.py
talia/setting/: CMakeLists.txt  config.cpp  config.h
talia/tests/: CMakeLists.txt  preft.cc  test_definitions.cc  test_parser.cc  test_pseudo.cc  test_utils.py
talia/utility/: CMakeLists.txt  definitions.cpp  definitions.h  parser.cpp  parser.h
talia/utils/: definitions.h  parser.py  record.cpp  record.h
(+31 files in other folders)
